Booking bug fix

--- a/src/app/contact-us/contact-us.component.html
+++ b/src/app/contact-us/contact-us.component.html
@@ -6,17 +6,22 @@
         <div class="col-md-4">
             <h2>Address</h2>
             <!-- Add Icon -->
-            1801 Imperial Drive
-            Imperial, MO
-            622025
+            1801 Imperial Drive<br>
+            Imperial, MO<br>
+            622025<br><br><br>
+
+            Hours:<br>
+            Monday-Sunday<br>
+            11:00 AM - 8:30 PM<br>
+            By Appointment Only
         </div>
         <div class="col-md-4">
-            <h2>Phone</h2>
+            <h2>Phone</h2><br>
             <!-- Add Icon -->
             687-995-9879
         </div>
         <div class="col-md-4">
-            <h2>Email</h2>
+            <h2>Email</h2><br>
             <!-- Add Icon -->
             support@RageRoomImperial.com
         </div>
