--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -8,7 +8,7 @@
            
           </div>
           <div class="col-md-4">
-           2021 @GentryCommunicationSolutions
+          The Rage Room - Imperial MO 62025      @GentryLLC
           </div>
           
         </div>
