--- a/src/app/home/packages-info/packages-info.component.html
+++ b/src/app/home/packages-info/packages-info.component.html
@@ -1,4 +1,8 @@
-<header>BOOK YOUR ESCAPE NOW</header>
+<header>BOOK YOUR ESCAPE NOW</header><br>
+<br>
+<br>
+<br>
+<br>
 <div class="container" id="booking"></div> 
     <div class="row">
 
