--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -22,7 +22,7 @@
     
     </div>
     <ol class="nav-links">
-      <a routerLink="/about-us">About</a>
+      <a routerLink="/about-us">About Us</a>
     </ol>
     <ol class="nav-links">
       <a routerLink="/booking">Booking</a>
