--- a/src/app/booking/booking.component.html
+++ b/src/app/booking/booking.component.html
@@ -1,75 +1,108 @@
-<br>
-<header>Book Your Experience<header>
-<br>
+Book Your Experience Here
 <div class="container">
     <div class="row">
-       <div class="col-xs-12 col-sm-10 col-md-8 col-sm-offset-1 col-md-offset-2">
-            <form #bookingForm="ngForm" (ngSubmit)="onSubmit">
-                
-                <div class="form-group">
-                    <label for="package">Choose a Package</label>
-                    <select
-                     name="package"
-                     id="package"
-                     [ngModel]=[selectedPackage]
-                     class="form-control"
-                    >
-                    <option
-                    *ngFor="let package of packages"
-                    [value]="package">{{ package }}
-                     </option>
-                    </select>
-                </div>
-                <div class="form-group">
-                    <label for="participant">How Many Participants?</label>
-                    <select
-                     name="participant"
-                     id="participant"
-                     [ngModel]=[selectedParticipants]
-                     class="form-control"
-                    >
-                    <option
-                    *ngFor="let participant of participants"
-                    [value]="participant">{{ participant }}
-                     </option>
-                    </select>
-                </div>
-                <div class="form-group">
-                    <label for="username">Head of Party Name?</label>
-                    <input
-                    type="text"
-                    id="username"
-                    class="form-control"
-                    ngModel
-                    name="username">
-                </div>
-                <div class="form-group">
-                    <label for="Phone">Phone Number</label>
-                    <input
-                    type="text"
-                    id="Phone"
-                    class="form-control"
-                    ngModel
-                    name="Phone">
-                </div>
+        <div class="col-xs-12 col-sm-10 col-md-8 col-sm-offset-1 col-md-offset-2">
+            
+         <form (ngSubmit)="onSubmit(f)" #f="ngForm">   
 
-                <div class="form-group-group">
-                    <label for="email">E-Mail Address</label>
-                    <input type="email"
-                    id="email"
-                    ngModel
-                    name="email"
-                    required
-                    email
-                    class="form-control"
-                    #email="ngModel">
-                    <span class="help-block" *ngIf="!email.valid && email.touched"> Please enter a valid email!</span>
-                </div>
-                <p *ngIf="!bookingForm.valid && bookingForm.touched">The form is incomplete!</p>
-                <br>
-                <button class="btn btn-primary" type="submit">Submit</button>
-            </form>   
-       </div> 
+              <mat-form-field appearance="fill" class="dateClass">
+                                    <mat-label>Choose a Date</mat-label>
+                                    <input matInput [matDatepicker]="picker">
+                                    <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+                                    <mat-datepicker #picker></mat-datepicker>
+                </mat-form-field>
+
+                <div id="user-data">
+                    <div class="form-group">
+
+                    
+                        <label for="timeSlot">Choose a Time Slot</label>
+                        <select
+                        name="timeSlot"
+                        id="timeSlot"
+                        [ngModel]=[selectedTimeSlot]
+                        class="form-control"
+                        required
+                        >
+                        <option
+                        *ngFor="let timeSlot of timeSlots"
+                        [value]="timeSlot">{{ timeSlot }}
+                        </option>
+                        </select>
+                    </div>
+                
+                    <div class="form-group">
+                        <label for="package">Choose a Package</label>
+                        <select
+                        name="package"
+                        id="package"
+                        [ngModel]=[selectedPackage]
+                        class="form-control"
+                        required
+                        >
+                        <option
+                        *ngFor="let package of packages"
+                        [value]="package">{{ package }}
+                        </option>
+                        </select>
+                    </div>
+                    <div class="form-group">
+                        <label for="participant">Number of Participants</label>
+                        <select
+                        name="participant"
+                        id="participant"
+                        [ngModel]=[selectedParticipants]
+                        class="form-control"
+                        required
+                        >
+                        <option
+                        *ngFor="let participant of participants"
+                        [value]="participant">{{ participant }}
+                        </option>
+                        </select>
+                    </div>
+                    <div class="form-group">
+                        <label for="username">Head of Party Name</label>
+                        <input
+                        type="text"
+                        id="username"
+                        class="form-control"
+                        ngModel
+                        name="username"
+                        required>
+                    </div>
+                    
+                    <div class="form-group">
+                        <label for="Phone">Phone Number</label>
+                        <input
+                        type="text"
+                        id="Phone"
+                        class="form-control"
+                        ngModel
+                        name="Phone"
+                        required>
+                        <!-- <span class="help-block" *ngIf="Phone.length===9">Please enter a valid phone number!</span> -->
+                    </div>
+
+                    <div class="form-group">
+                        <label for="email">E-Mail Address</label>
+                        <input type="email"
+                        id="email"
+                        ngModel
+                        name="email"
+                        required
+                        email
+                        class="form-control"
+                        #email="ngModel">
+                        <span class="help-block" *ngIf="!email.valid && email.touched"> Please enter a valid email!</span>
+                    </div>
+                    <p *ngIf="!onSubmit.valid && onSubmit.touched">The form is incomplete!</p>
+                    <br>
+                    <button class="btn btn-primary" type="submit" [disabled]="!f.valid">Submit</button>
+             
+                 </div> 
+           </form> 
+        </div>  
     </div>
 </div>
 
