--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -7,14 +7,16 @@
 
 <div class="img-container">
     <div class="row-text">
-      Break <br> <br>
-      Destroy<br> <br>
-      Release
+     <p class="p1">Break</p>  <br> <br>
+      <p class="p1">Destroy</p><br> <br>
+      <p class="p1">Release</p>
       <div class="col-lg-12">
         <!-- <img src="assets/images/home-page-img.jpg" alt="home"> -->
       </div>
  </div>
-      
+      <br>
+      <br>
+      <br>
 
 <div class="container">
   <div class="row">
