--- a/src/app/booking/booking.component.html
+++ b/src/app/booking/booking.component.html
@@ -97,8 +97,8 @@ Book Your Experience Here
                         #email="ngModel">
                         <span class="help-block" *ngIf="!email.valid && email.touched"> Please enter a valid email!</span>
                     </div>
-                    <p *ngIf="!onSubmit.valid && onSubmit.touched">The form is incomplete!</p>
-                    <p *ngIf="onSubmit.valid && onSubmit.touched">{{ bookingDetails | titleCase }}</p>
+                    <p *ngIf="!onSubmit">The form is incomplete!</p>
+                  
                     <br>
                     <button class="btn btn-primary" type="submit" [disabled]="!f.valid">Submit</button>
              
