tests in contact-us and booking component

--- a/src/app/booking/booking.component.html
+++ b/src/app/booking/booking.component.html
@@ -70,6 +70,7 @@ Book Your Experience Here
                         class="form-control"
                         ngModel
                         name="username"
+                        [value]="username">{{ username  }}
                         required>
                     </div>
                     
